# ghaiklor-os-rust

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  bootstrap.sh  linker.ld
.cargo/: config
.github/workflows/: rust.yml
boot/: boot.asm  multiboot.asm
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs
src/arch/x86_64/: grub.cfg  linker.ld
src/arch/x86_64/boot/: begin_long_mode.asm  boot.asm  boot_error.asm  check_cpuid.asm  check_long_mode.asm  check_multiboot.asm  enable_paging.asm  setup_page_tables.asm  setup_sse.asm
src/task/: executor.rs  keyboard.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
