[package]
name = "ghaiklor_os_rust"
version = "0.1.0"
authors = ["Eugene Obrezkov <ghaiklor@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-success-exit-code = 33
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]

[dependencies]
bootloader = { version = "0.8.5", features = ["map_physical_memory"] }
linked_list_allocator = "0.6.4"
pc-keyboard = "0.3.1"
pic8259_simple = "0.1.1"
spin = "0.5.2"
uart_16550 = "0.2.2"
volatile = "0.2.6"
x86_64 = "0.8.3"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
