[package]
name = "ghaiklor_os_rust"
version = "0.1.0"
authors = ["Eugene Obrezkov <ghaiklor@gmail.com>"]
edition = "2018"

[package.metadata.bootimage]
test-success-exit-code = 33
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]

[dependencies]
bootloader = { version = "0.9.11", features = ["map_physical_memory"] }
linked_list_allocator = "0.8.6"
pc-keyboard = "0.5.1"
pic8259_simple = "0.2.0"
spin = "0.7.0"
uart_16550 = "0.2.10"
volatile = "0.2.7"
x86_64 = "0.12.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]
